.nx/cache/terminalOutputs/1741561136465682981

> facturacion-autonomos-frontend@0.0.0 lint
> eslint .

[1G[0K(node:95605) Warning: Failed to load the ES module: /Users/estudio/Projects/GitHub/NODE/facturacion-autonomos-frontend/node_modules/eslint/lib/eslint/eslint.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)

Oops! Something went wrong! :(

ESLint: 9.28.0

/Users/estudio/Projects/GitHub/NODE/facturacion-autonomos-frontend/node_modules/eslint/lib/eslint/eslint.js:1162
export default [
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1666:18)
    at Module._compile (node:internal/modules/cjs/loader:1708:20)
    at Object..js (node:internal/modules/cjs/loader:1899:10)
    at Module.load (node:internal/modules/cjs/loader:1469:32)
    at Module._load (node:internal/modules/cjs/loader:1286:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:235:24)
    at Module.require (node:internal/modules/cjs/loader:1491:12)
    at require (node:internal/modules/helpers:135:16)
    at Object.<anonymous> (/Users/estudio/Projects/GitHub/NODE/facturacion-autonomos-frontend/node_modules/eslint/lib/eslint/index.js:3:20)
[1G[0K⠙[1G[0K